improve the move behavior of snake, deal with snake tail next